--- a/src/templates/_includes/forms/checkboxSelect.twig
+++ b/src/templates/_includes/forms/checkboxSelect.twig
@@ -34,6 +34,10 @@
     {%- endif %}
     {%- for key, option in options %}
         {%- if option is not iterable %}
+            {%- if option.info is defined %}
+                {%- set info = option.info %}
+            {%- endif %}
+
             {%- set option = {label: option, value: key} %}
         {%- endif %}
         {% if not showAllOption or option.value is not defined or option.value != allValue %}
@@ -41,7 +45,8 @@
                 {% include "_includes/forms/checkbox" with {
                     name: (name ?? false) ? "#{name}[]" : null,
                     checked: ((showAllOption and allChecked) or (option.value is defined and option.value in values)),
-                    disabled: (showAllOption and allChecked)
+                    disabled: (showAllOption and allChecked),
+                    info: (info ?? false)
                 }|merge(option) only %}
             </div>
         {% endif %}
