--- a/src/templates/_includes/disclosuremenu.twig
+++ b/src/templates/_includes/disclosuremenu.twig
@@ -21,11 +21,12 @@
       hidden: item.hidden ?? false,
     }|filter|keys,
   } %}
+    {% set selected = item.selected ?? false %}
     {% tag (type == 'button' ? 'button' : 'a') with {
       id: id,
       class: {
         'menu-item': true,
-        sel: item.selected ?? false,
+        sel: selected,
         error: item.destructive ?? false,
         formsubmit: item.action ?? false,
       }|filter|keys,
@@ -46,6 +47,9 @@
       <span class="menu-item-label">{{ item.label ?? item.html|raw }}</span>
       {% if item.description is defined %}
         <div class="menu-item-description smalltext light">{{ item.description }}</div>
+      {% endif %}
+      {% if selected %}
+        <span class="visually-hidden">, selected</span>
       {% endif %}
     {% endtag %}
   {% endtag %}
