--- a/src/templates/_includes/forms/select.twig
+++ b/src/templates/_includes/forms/select.twig
@@ -21,6 +21,7 @@
         (toggle ?? false) ? 'fieldtoggle' : null,
     ]|filter,
     name: name ?? false,
+    autocomplete: (autocomplete ?? false),
     autofocus: (autofocus ?? false) and not craft.app.request.isMobileBrowser(true),
     disabled: disabled ?? false,
     aria: {
