--- a/src/web/assets/cp/src/css/_cp.scss
+++ b/src/web/assets/cp/src/css/_cp.scss
@@ -461,7 +461,7 @@ $systemInfoHoverBgColor: darken($grey800, 10%);
 li.crumb {
   .menubtn,
   .action-btn {
-    padding: 0 var(--s) !important;
+    padding: 0 var(--s);
     height: var(--touch-target-size);
 
     &:not(:hover):not(:active) {
@@ -630,7 +630,6 @@ li.crumb {
 
   .menubtn {
     position: relative;
-    top: -1px;
     margin: 0 calc(var(--xs) * -1 / 2);
   }
 
@@ -705,15 +704,6 @@ li.breadcrumb-toggle-wrapper {
   &::after {
     content: none;
   }
-}
-
-.context-menu-container {
-  border: 1px solid var(--medium-hairline-color);
-  border-radius: calc(var(--touch-target-size) / 2);
-}
-
-.context-menu-container .menubtn {
-  @include margin-left(0);
 }
 
 #account-menu {
