make fsHandle required when defining a volume

--- a/src/templates/settings/assets/volumes/_edit.twig
+++ b/src/templates/settings/assets/volumes/_edit.twig
@@ -35,7 +35,8 @@
     name: 'fsHandle',
     includeEnvVars: true,
     value: volume.getFsHandle(false),
-    options: fsOptions
+    options: fsOptions,
+    errors: volume.getErrors('fsHandle'),
 }) }}
 
 {{ forms.fsField({
