--- a/src/templates/users/_password.twig
+++ b/src/templates/users/_password.twig
@@ -22,7 +22,9 @@
 <h2>{{ 'Two-Step Verification'|t('app') }}</h2>
 <p>{{ 'Improve your account’s security by adding a second verification step when signing in.'|t('app') }}</p>
 
-{% include 'users/_auth-methods.twig' %}
+{% include 'users/_auth-methods.twig' with {
+  paneClass: 'hairline',
+} %}
 
 {% js %}
   new Craft.PasswordInput('#newPassword');
