--- a/src/templates/_layouts/base.twig
+++ b/src/templates/_layouts/base.twig
@@ -56,6 +56,7 @@
 <body {{ attr(bodyAttributes) }}>
     {{ beginBody() }}
     {% block body %}{% endblock %}
+    {% include '_layouts/components/notifications' %}
     {% block foot %}{% endblock %}
     {{ endBody() }}
 </body>
