--- a/src/templates/users/index.twig
+++ b/src/templates/users/index.twig
@@ -8,6 +8,8 @@
 {% set title = "Users"|t('app') %}
 {% set elementType = 'craft\\elements\\User' %}
 
+{% set canHaveDrafts = craft.users().drafts().draftOf(false).savedDraftsOnly().exists() %}
+
 {% block actionButton %}
     {% if currentUser.can('registerUsers') %}
         <a class="btn submit add icon" href="{{ url('users/new') }}">{{ "New user"|t('app') }}</a>
