Deprecate $type in favor of $inputType

--- a/src/templates/_includes/forms/text.twig
+++ b/src/templates/_includes/forms/text.twig
@@ -1,4 +1,4 @@
-{%- set type = inputType ?? type ?? 'text' %}
+{%- set type = type ?? 'text' %}
 {%- set autocomplete = autocomplete ?? false %}
 
 {%- set class = (class ?? [])|explodeClass|merge([
