--- a/src/templates/_components/fieldtypes/Matrix/block.twig
+++ b/src/templates/_components/fieldtypes/Matrix/block.twig
@@ -1,6 +1,6 @@
 {% set entryType = entry.getType() %}
 {% set entryTypeName = entryType.name|t('site') %}
-{% set baseInputName = "#{name}[entries][#{entry.uid}]" %}
+{% set baseInputName = "#{name}[entries][uid:#{entry.uid}]" %}
 {% set static = static ?? false %}
 {% set staticEntries = staticEntries ?? false %}
 {% set entryAttributes = {
