Fix field settings

--- a/src/templates/settings/fields/_edit.twig
+++ b/src/templates/settings/fields/_edit.twig
@@ -129,7 +129,7 @@
     <div id="settings">
         <div id="{{ className(field)|id }}">
             {% include 'settings/fields/_type-settings' with {
-                namespace: 'types['~className(field)~']'
+                namespace: 'types['~className(field)|id~']'
             } %}
         </div>
     </div>
