--- a/src/web/assets/cp/src/css/_main.scss
+++ b/src/web/assets/cp/src/css/_main.scss
@@ -5227,6 +5227,10 @@ $min2ColWidth: 400px;
   }
 }
 
+.modal-copy-content {
+  max-width: 500px;
+}
+
 .hud {
   position: absolute;
   display: none;
