Fix required field error

--- a/src/templates/_special/copy-content-fields.twig
+++ b/src/templates/_special/copy-content-fields.twig
@@ -9,7 +9,10 @@ Copy content fields, fetched via XHR by the "Copy content from site" tooltip
 
 {{ hiddenInput('elementId', elementId) }}
 {{ hiddenInput('provisional', provisional ?? false) }}
-{{ hiddenInput('copyFieldHandle', copyFieldHandle ?? null) }}
+
+{% if copyFieldHandle ?? null %}
+    {{ hiddenInput('copyFieldHandle', copyFieldHandle) }}
+{% endif %}
 
 {% if draftId ?? false %}
     {{ hiddenInput('draftId', draftId) }}
