--- a/src/templates/_components/utilities/DeprecationErrors/index.twig
+++ b/src/templates/_components/utilities/DeprecationErrors/index.twig
@@ -24,7 +24,7 @@
             <tbody>
             {% for log in logs %}
                 <tr data-id="{{ log.id }}">
-                    <td>{{ log.message|e|md(inlineOnly=true)|raw }}</td>
+                    <td>{{ log.message|md(inlineOnly=true, encode=true)|raw }}</td>
                     <td class="code">
                         {{- log.file|e|replace('/', '/<wbr>')|raw }}
                         {%- if log.line -%}
