Send back HTML when updating fields

--- a/src/web/assets/cp/src/css/_main.scss
+++ b/src/web/assets/cp/src/css/_main.scss
@@ -6461,7 +6461,7 @@ fieldset {
 }
 
 .copy-translation-dialogue {
-  max-width: 23em;
+  max-width: 380px;
 
   .copy-sites-menu-btn {
     margin: 0 0.75em;
