Convert copy attribute to web component
The primary gain here is that we don't need to re-initialize them after replacing DOM elements

--- a/src/templates/_includes/forms/copytextbtn.twig
+++ b/src/templates/_includes/forms/copytextbtn.twig
@@ -10,10 +10,5 @@
 } %}
 
 <craft-copy-attribute>
-    {% tag 'div' with attributes %}
-        {{ tag('span', {
-            class: 'copytextbtn__value',
-            text: value,
-        }) }}
-    {% endtag %}
+    {{ value }}
 </craft-copy-attribute>
