--- a/packages/craftcms-sass/_mixins.scss
+++ b/packages/craftcms-sass/_mixins.scss
@@ -176,10 +176,10 @@ $radioSize: 16px;
     'Helvetica Neue', sans-serif;
 }
 
-@mixin fixed-width-font {
+@mixin fixed-width-font($size: 0.9em) {
   font-family: 'SFMono-Regular', Consolas, 'Liberation Mono', Menlo, Courier,
     monospace;
-  font-size: 0.9em !important;
+  font-size: $size !important;
 }
 
 @function toRem($values...) {
