--- a/src/web/assets/cp/src/css/_main.scss
+++ b/src/web/assets/cp/src/css/_main.scss
@@ -1699,40 +1699,24 @@ ul.icons {
   }
 }
 
-.copytextbtn {
-  display: inline-flex;
-  flex-wrap: nowrap;
-  align-items: center;
+craft-copy-attribute {
+  @include fixed-width-font(calc(11rem / 16));
   border: 1px solid var(--hairline-color);
+  padding: 0 5px;
   border-radius: var(--small-border-radius);
-  padding: 0 9px;
-  cursor: pointer;
   color: var(--medium-text-color);
 
-  .copytextbtn__icon {
-    padding: 0;
-    width: 13px;
-    background: none;
-    margin-top: -3px;
-    @include margin-left(5px);
-    color: var(--light-text-color);
-  }
+  button {
+    gap: 5px;
+    display: inline-flex;
+    flex-wrap: nowrap;
+    align-items: center;
+    cursor: pointer;
 
-  &:hover,
-  &:focus {
-    border-color: var(--medium-hairline-color);
-    color: var(--text-color);
-
-    .copytextbtn__value {
+    &:hover,
+    &:focus {
+      border-color: var(--medium-hairline-color);
       color: var(--text-color);
-    }
-  }
-
-  &.small {
-    padding: 0 5px;
-
-    .copytextbtn__value {
-      font-size: calc(11rem / 16);
     }
   }
 }
