--- a/src/web/assets/cp/src/css/_cp.scss
+++ b/src/web/assets/cp/src/css/_cp.scss
@@ -425,10 +425,28 @@ $systemInfoHoverBgColor: darken($grey800, 10%);
     padding: 10px 24px;
     box-shadow: inset 0 -1px 0 0 var(--red-100);
 
-    a.btn,
+    .resolvable-alert-buttons {
+      margin-top: var(--m);
+    }
+
+    .btn,
     a.go {
       display: inline-flex;
       align-items: center;
+      border: 1px solid transparentize($errorColor, 0.5);
+      border-radius: var(--medium-border-radius);
+      padding: 4px 5px;
+      margin: 0 2px;
+      color: var(--error-color);
+      height: calc(30rem / 16);
+
+      .flex & {
+        margin: 0;
+      }
+
+      &:hover {
+        border-color: var(--error-color);
+      }
     }
 
     a:not(.btn) {
@@ -438,21 +456,17 @@ $systemInfoHoverBgColor: darken($grey800, 10%);
       &.go {
         text-decoration: none;
         white-space: nowrap;
-        border: 1px solid transparentize($errorColor, 0.5);
-        border-radius: var(--medium-border-radius);
-        padding: 4px 5px;
-        margin: 0 2px;
 
         &:after {
           color: var(--error-color);
           font-size: 15px;
           margin-top: 1px;
         }
-
-        &:hover {
-          border-color: var(--error-color);
-        }
       }
+    }
+
+    .btn {
+      background-color: transparent;
     }
   }
 }
