--- a/src/web/assets/cp/src/css/_main.scss
+++ b/src/web/assets/cp/src/css/_main.scss
@@ -3561,6 +3561,19 @@ table.editable {
         &.textual {
           padding: 0;
 
+          .editable-table-preview {
+            @include alignleft;
+            white-space: pre-wrap;
+
+            & + textarea {
+              opacity: 0;
+              height: 0;
+              min-height: 0;
+              padding-top: 0;
+              padding-bottom: 0;
+            }
+          }
+
           textarea {
             resize: none;
           }
@@ -3632,7 +3645,8 @@ table.editable {
     textarea,
     textarea.text,
     input.text,
-    pre {
+    pre,
+    .editable-table-preview {
       display: block;
       width: 100%;
       border: none;
