--- a/src/templates/settings/sections/_edit.twig
+++ b/src/templates/settings/sections/_edit.twig
@@ -88,7 +88,7 @@
     } %}
         {{ forms.field({
             label: 'Entry Type',
-            instructions: 'Choose the type of entry this section’s entry will have.'|t('app'),
+            instructions: 'Choose the type of entry this section will have.'|t('app'),
             id: 'single-entry-type',
             name: 'singleEntryType',
             options: singleEntryTypeOptions,
