--- a/src/templates/settings/sections/_edit.twig
+++ b/src/templates/settings/sections/_edit.twig
@@ -221,7 +221,7 @@
 
     {{ forms.textField({
         label: "Max Authors"|t('app'),
-        instructions: "The maximum number of authors this section can have. Default is 1."|t('app'),
+        instructions: "The maximum number of authors entries in this section can have"|t('app'),
         id: 'maxAuthors',
         name: 'maxAuthors',
         class: 'code',
