--- a/src/templates/settings/sections/_edit.twig
+++ b/src/templates/settings/sections/_edit.twig
@@ -219,21 +219,6 @@
         errors: siteErrors|unique
     }) }}
 
-    {{ forms.textField({
-        label: "Max Authors"|t('app'),
-        instructions: "The maximum number of authors entries in this section can have"|t('app'),
-        id: 'maxAuthors',
-        name: 'maxAuthors',
-        class: 'code',
-        autocorrect: false,
-        autocapitalize: false,
-        default: 1,
-        value: section.maxAuthors,
-        errors: section.getErrors('maxAuthors'),
-        size: 5,
-        required: true
-    }) }}
-
     {% if craft.app.getIsMultiSite() %}
         <div class="field type-channel type-structure {% if section.type == 'single' %}hidden{% endif %}">
             {{ forms.selectField({
@@ -312,6 +297,20 @@
             errors: section.getErrors('previewTargets')
         }) }}
     {% endif %}
+
+    {{ forms.textField({
+        label: 'Max Authors'|t('app'),
+        instructions: 'The maximum number of authors entries in this section can have'|t('app'),
+        id: 'maxAuthors',
+        name: 'maxAuthors',
+        autocorrect: false,
+        autocapitalize: false,
+        default: 1,
+        value: section.maxAuthors,
+        errors: section.getErrors('maxAuthors'),
+        size: 5,
+        required: true
+    }) }}
 {% endblock %}
 
 {% if brandNewSection %}
