--- a/src/templates/_layouts/cp.twig
+++ b/src/templates/_layouts/cp.twig
@@ -143,7 +143,7 @@
                 <div class="flex flex-nowrap gap-xs">
                     {% include '_layouts/components/crumbs' %}
                     {% if contextMenu %}
-                        <div class="context-menu-container">
+                        <div id="context-menu-container" class="context-menu-container">
                             {{ contextMenu|raw }}
                         </div>
                     {% endif %}
