Turn makeFocusable to false by default in Garnish select

--- a/src/templates/_elements/tableview/elements.twig
+++ b/src/templates/_elements/tableview/elements.twig
@@ -23,6 +23,7 @@
                     class: 'checkbox',
                     title: 'Select'|t('app'),
                     role: 'checkbox',
+                    tabindex: '0',
                     aria: {
                         label: 'Select'|t('app'),
                         checked: 'false',
